concord_macros/tests/dsl/fail/fail_generated_local_client_in_policy_expr.rs
use concord_core::prelude::*;
use concord_macros::api;

api! {
    client GeneratedLocalClientPolicyApi {
        base "https://example.com"
    }

    GET Ping
    path ["ping"]
    header "X-Leak" = client.name()
    -> Text<String>
}

fn main() {}
